[package]
name = "counter-app"
version = "0.1.0"
authors = ["Senriki"]
edition = "2021"
build = "build.rs"
description = "DESKTOP APP that divide income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"

[build-dependencies]
slint-build = "1.4"

[package.metadata.bundle]
name = "income divider"
identifier = "io.github.senriki.income-divider"

[package.metadata.wix]
eula = false